atualizção do exercíicio mq005

--- a/exercicios/ex026/mq005/estilos/style.css
+++ b/exercicios/ex026/mq005/estilos/style.css
@@ -15,13 +15,27 @@ header {
     background-color: gray;
 }
 
+.material-symbols-outlined {
+    background-color: rgb(48, 48, 48);
+    color: white;
+    display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.material-symbols-outlined:hover {
+    background-color: white;
+    color: black;
+}
+
 header > h1 {
     padding: 10px;
     text-align: center;
 }
 
 menu {
-    display: block;
+    display: none;
 }
 
 menu > ul {
